# jj

./: CHANGELOG.md  Cargo.toml
cli/: Cargo.toml
cli/src/: cli_util.rs  command_error.rs  config-schema.json  diff_util.rs  git_util.rs
cli/src/commands/: absorb.rs  converge.rs  mod.rs  run.rs
cli/src/commands/git/: colocation.rs  import.rs  init.rs
cli/src/commands/operation/: diff.rs  integrate.rs  log.rs  mod.rs  show.rs
cli/src/commands/workspace/: forget.rs
cli/src/config/: misc.toml  revsets.toml
cli/src/merge_tools/: external.rs  mod.rs
cli/tests/: cli-reference@.md.snap  test_absorb_command.rs  test_bisect_command.rs  test_commit_template.rs  test_completion.rs  test_concurrent_operations.rs  test_config_command.rs  test_duplicate_command.rs  test_edit_command.rs  test_evolog_command.rs  test_file_chmod_command.rs  test_git_clone.rs  test_git_colocated.rs  test_git_fetch.rs  test_git_import_export.rs  test_git_init.rs  test_global_opts.rs  test_identical_commits.rs  test_log_command.rs  test_metaedit_command.rs  test_op_integrate_command.rs  test_op_restore_command.rs  test_operations.rs  test_rebase_command.rs  test_run_command.rs  test_split_command.rs  test_squash_command.rs  test_undo_redo_commands.rs  test_util_command.rs  test_working_copy.rs  test_workspaces.rs
cli/tests/common/: test_environment.rs
core/: Cargo.toml
core/proc-macros/: Cargo.toml
core/proc-macros/src/: content_hash.rs  lib.rs
core/src/: backend.rs  content_hash.rs  dsl_util.rs  file_util.rs  fileset.pest  fileset_parser.rs  lib.rs  matchers.rs  object_id.rs  ref_name.rs  repo_path.rs  revset.pest  revset.rs  revset_parser.rs  signing.rs  workspace_store.rs
docs/: config.md  revsets.md
docs/design/: jj-converge-command.md
lib/: Cargo.toml
lib/gen-protos/src/: main.rs
lib/src/: absorb.rs  backend.rs  conflicts.rs  content_hash.rs  converge.rs  dsl_util.rs  fileset_parser.rs  git.rs  git_backend.rs  hex_util.rs  lib.rs  matchers.rs  op_store.rs  ref_name.rs  repo.rs  repo_path.rs  revset.rs  revset_parser.rs  signing.rs  simple_op_store.rs  transaction.rs  view.rs  workspace.rs  workspace_store.rs
lib/src/protos/: simple_op_store.proto  simple_op_store.rs
lib/tests/: runner.rs  test_conflicts.rs  test_converge.rs  test_git.rs  test_merge_operations.rs  test_operations.rs  test_view.rs
lib/testutils/src/: lib.rs
