[package]
name = "jj-core"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]

[lints]
workspace = true
